--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.15.3",
-        "font-awesome": "^4.7.0"
+        "font-awesome": "^4.7.0",
+        "jquery-validation": "^1.19.3"
     }
 }
